# git_automation

./: Cargo.toml  README.md
src/: main.rs
