[package]
name = "git_automation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[bin]]
edition = "2021"
name = "new-repo"
path = "src/main.rs"